# gtp-cli

./: README.md  pyproject.toml
docs/: guitar-lick-json-spec.md  lick-json-spec.md
scripts/: package.sh
src/gtp_cli/: __init__.py  automation.py  cli.py  lick_musicxml.py  lick_spec.py  paths.py
tests/: 7和弦順階連奏.xml  full_band_lick.json  full_band_lick.musicxml  lick_4bar_guitar.json  lick_4bar_guitar.musicxml  test_cli.py
