[project]
name = "gtp-cli"
version = "0.1.0"
description = "macOS CLI wrapper for importing MusicXML into Guitar Pro 8 and exporting score files/images."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Summer" }]
dependencies = [
    "jsonschema>=4.23.0",
]

[project.scripts]
gtp-cli = "gtp_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
